--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "d3": "^7.4.3",
+    "material-design-icons-iconfont": "^6.6.0",
     "materialize-css": "^0.100.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
